# myownsnake

./: CMakeLists.txt  COMPLETION_CHECKLIST.md  ENGINEERING_REPORT.md  PROJECT_STRUCTURE.md  README.md
src/: main.cpp
src/core/: GameLoop.cpp  GameLoop.h  StateMachine.cpp  StateMachine.h
src/gameplay/: Food.cpp  Food.h  Snake.cpp  Snake.h
src/include/: config.h
src/persistence/: SaveSystem.cpp  SaveSystem.h
src/systems/: InputSystem.cpp  InputSystem.h  RenderSystem.cpp  RenderSystem.h  TimeSystem.cpp  TimeSystem.h
